<resources>
    <string name="app_name">ShopSmart</string>
    <string name="text_t">SHOP SMART</string>
    <string name="smart_buys_n_big_savings">SMART BUYS\n BIG SAVINGS</string>
    <string name="get_in">Get In</string>
    <string name="shop_smart">SHOP SMART</string>
    <string name="email">Email/User name</string>
    <string name="input"> </string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="todo1">TODO</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_and_get_started">Sign up and get started!</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="text_text">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email_address">Mandatory</string>
    <string name="star">*</string>
    <string name="email_user_name">Email/User name</string>
    <string name="password">Password</string>
    <string name="email1">Enter Email</string>
    <string name="username">Mandatory</string>
    <string name="star1">*</string>
    <string name="username1">Enter username</string>
    <string name="password1">Mandatory</string>
    <string name="password2">Enter password</string>
    <string name="sign_up1">Sign up</string>
    <string name="you_have_an_account_already">You have an account already?</string>
    <string name="sign_in_and_get_started">Sign in and get started!</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="enter_email">Enter email</string>
    <string name="shop_smart1">SHOP SMART</string>
    <string name="todo12">TODO</string>
    <string name="category">CATEGORY</string>
    <string name="input1" />
    <string name="todo13">TODO</string>
    <string name="facebook_app_id">1083518752721455</string>
    <string name="fb_login_protocol_scheme">fb1083518752721455</string>
    <string name="facebook_client_token">4832feb734ffd7f8089d98c7987afa07</string>
    <string name="web_client_id">424656365119-ii89mpta0ks1gq65c5ochgp7i2geng03.apps.googleusercontent.com</string>
    <string name="recommend_for_you">RECOMMEND FOR YOU</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="me">Me</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
    <string name="todo26">TODO</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="search_bar">Search bar</string>
    <string name="laptop_vivo_book">Laptop Vivo book</string>
    <string name="oppo_reno6_5g_128gb">Oppo Reno6 5G 128Gb</string>
    <string name="delete_search_history">Delete Search History</string>
    <string name="profile_name">Lucy_2024</string>
    <string name="mem_rank">Member</string>
    <string name="online">Online</string>
    <string name="nav_like">Liked</string>
    <string name="nav_notice">Notice</string>
    <string name="nav_watched">Watched</string>
    <string name="nav_reviewed">Reviewed</string>
    <string name="nav_coupon">Coupon</string>
    <string name="flash_sale">FLASH SALE TODAY</string>
    <string name="laptop_name">HP 50R74PA 14" HD Laptop (128GB) [Intel Cele..</string>
    <string name="laptop_price">$448</string>
    <string name="laptop_sales">$388</string>
    <string name="phone_name">Google Pixel 8 Plus Pro 5G 128GB (Bay)</string>
    <string name="phone_price">$1.699</string>
    <string name="phone_sales">$1.299</string>
    <string name="no_coupon">Sorry, You have no Coupon!</string>
    <string name="my_interest">Interest</string>
    <string name="password_reset">Reset your password</string>
    <string name="send_email">Send reset email</string>
    <string name="todo29">TODO</string>
    <string name="todo30">TODO</string>
    <string name="todo31">TODO</string>
    <string name="compare">Compare</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="specifications">Specifications</string>
    <string name="text">iPhone 15 brings you Dynamic Island, a 48MP Main camera and USB-C — all in a durable colour-infused glass and aluminium design.\n\n
        <b>Key Features</b>\n
        <b>Dynamic Island Comes to iPhone 15</b>\n
Dynamic Island bubbles up alerts and Live Activities — so you don’t miss them while you’re doing something else. You can see who’s calling, track your next ride, check your flight status and so much more.\n

<b>Innovative Design</b>\n
iPhone 15 features a durable colour-infused glass and aluminium design. It’s splash, water- and dust-resistant.1 The Ceramic Shield front is tougher than any smartphone glass. And the 6.1″ Super Retina XDR display2 is up to 2x brighter in the sun compared to iPhone 14.\n

<b>48MP Main Camera With 2x Telephoto</b>\n
The 48MP Main camera shoots in super-high resolution. So, it’s easier than ever to take stand-out photos with amazing detail. The 2x optical-quality Telephoto lets you frame the perfect close-up.\n

<b>Next-Generation Portraits</b>\n
Capture portraits with dramatically more detail and colour. Just tap to shift the focus between subjects — even after you take the shot.\n

<b>Powerhouse A16 Bionic Chip</b>\n
The superfast chip powers advanced features like computational photography, fluid Dynamic Island transitions and Voice Isolation for phone calls. And A16 Bionic is incredibly efficient to help deliver great all-day battery life.3\n

<b>USB-C Connectivity</b>\n
The USB-C connector lets you charge your Mac or iPad with the same cable you use to charge iPhone 15. You can even use iPhone 15 to charge Apple Watch or AirPods.\n

<b>Vital Safety Features</b>\n
If you need emergency services and you don’t have mobile network connection or Wi-Fi, you can use Emergency SOS via satellite.4 With Crash Detection, iPhone can detect a severe car crash and call for help if you can’t.5\n

<b>Designed To Make a Difference</b>\n
iPhone comes with privacy protections that help keep you in control of your data. It’s made from more recycled materials to minimise environmental impact. And it has built-in features that make iPhone more accessible to all.\n\n

<b>Legal</b>\n
1 iPhone 15, iPhone 15 Plus, iPhone 15 Pro and iPhone 15 Pro Max are splash-, water- and dust-resistant, and were tested under controlled laboratory conditions with a rating of IP68 under IEC standard 60529 (maximum depth of 6 metres for up to 30 minutes). Splash, water and dust resistance are not permanent conditions, and resistance might decrease as a result of normal wear. Do not attempt to charge a wet iPhone; refer to the user guide for cleaning and drying instructions. Liquid damage is not covered under warranty but you might have rights under consumer law.\n
2 The display has rounded corners. When measured as a standard rectangle, the screen is 6.12 inches (iPhone 15 Pro, iPhone 15) or 6.69 inches (iPhone 15 Pro Max, iPhone 15 Plus) diagonally. Actual viewable area is less.\n
3 Battery life varies by use and configuration; see apple.com/au/batteries for more information.\n
4 Service is included for free for two years with the activation of any iPhone 15 model. Connection and response times vary based on location, site conditions and other factors. See support.apple.com/en-au/HT213885 for more information.\n
5 iPhone 15 and iPhone 15 Pro can detect a severe car crash and call for help. Requires a mobile network connection or Wi-Fi calling.\n
<b>Technical specifications</b>\n
Go to apple.com/au/iphone/compare for a complete set.</string>
    <string name="more_details">More Details</string>
    <string name="less_details">Less Details</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="todo33">TODO</string>
    <string name="todo34">TODO</string>
    <string name="todo35">TODO</string>
    <string name="todo36">TODO</string>
    <string name="todo37">TODO</string>
    <string name="todo38">TODO</string>
    <string name="todo39">TODO</string>
    <string name="todo40">TODO</string>
    <string name="todo41">TODO</string>
    <string name="todo42">TODO</string>
    <string name="todo43">TODO</string>
    <string name="todo44">TODO</string>
    <string name="todo45">TODO</string>
    <string name="todo46">TODO</string>
    <string name="todo47">TODO</string>
    <string name="todo48">TODO</string>
    <string name="todo49">TODO</string>
    <string name="todo50">TODO</string>
    <string name="todo51">TODO</string>
    <string name="todo52">TODO</string>
    <string name="todo53">TODO</string>
    <string name="todo54">TODO</string>
    <string name="todo55">TODO</string>
    <string name="todo56">TODO</string>
    <string name="phone_operating_system">Phone Operating System</string>
    <string name="ios">iOS</string>
    <string name="phone_type">Phone Type</string>
    <string name="iphone_15">iPhone 15</string>
    <string name="network_compatibility">Network compatibility</string>
    <string name="_5g">5G</string>
    <string name="sim_type">SIM type</string>
    <string name="sim_nano_sim_esim">SIM (nano-SIM + eSIM)</string>
    <string name="colour">Colour</string>
    <string name="pink">Pink</string>
    <string name="device_screen_size_inches">Device screen size (inches)</string>
    <string name="_6_7">6.7</string>
    <string name="resolution_pixels">Resolution (Pixels)</string>
    <string name="_2796_x_1290">2796 x 1290</string>
    <string name="display_type">Display type</string>
    <string name="super_retina_xdr_display">Super Retina XDR display</string>
    <string name="touchscreen">Touchscreen</string>
    <string name="yes">Yes</string>
    <string name="internal_storage">Internal storage</string>
    <string name="_128gb">128GB</string>
    <string name="battery_life">Battery life</string>
    <string name="up_to_20_hours_video_playback">Up to 20 hours video playback</string>
    <string name="wireless_charging_type">Wireless Charging Type</string>
    <string name="magsafe">MagSafe</string>
    <string name="face_unlock">Face unlock</string>
    <string name="yes1">Yes</string>
    <string name="processor">Processor</string>
    <string name="a16_bionic_chip">A16 Bionic chip</string>
    <string name="rear_cameras_mp">Rear Cameras (MP)</string>
    <string name="_48mp_12mp">48MP + 12MP</string>
    <string name="front_camera_mp">Front camera (MP)</string>
    <string name="_12mp">12MP</string>
    <string name="built_in_flash">Built-in flash</string>
    <string name="yes2">Yes</string>
    <string name="digital_zoom">Digital zoom</string>
    <string name="up_to_10x">up to 10x</string>
    <string name="video_recording">Video recording</string>
    <string name="ultra_hd">Ultra HD</string>
    <string name="video_frames_per_second">Video Frames Per Second</string>
    <string name="_4k_60fps">4K@60fps</string>
    <string name="environmental_protection">Environmental protection</string>
    <string name="water_resistant">Water resistant</string>
</resources>