<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1.5"
                android:contentDescription="@string/todo1"
                app:srcCompat="@drawable/arrow" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/nav_watched"
                android:textColor="#9747FF"
                android:textSize="31sp" />

            <ImageView
                android:id="@+id/imageView46"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/clock" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/watched_products_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>