<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todo3"
                app:srcCompat="@drawable/arrow" />

            <ImageView
                android:id="@+id/imageView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:contentDescription="@string/todo4"
                app:srcCompat="@drawable/bell" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/inter"
                android:text="@string/nav_notice"
                android:textColor="#9747FF"
                android:textSize="24sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView61"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginHorizontal="30dp"
                    android:contentDescription="@string/todo10"
                    app:srcCompat="@drawable/magsafe" />

                <ImageView
                    android:id="@+id/imageView62"
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:layout_marginHorizontal="30dp"
                    android:contentDescription="@string/todo10"
                    app:srcCompat="@drawable/xiaomi" />

                <ImageView
                    android:id="@+id/imageView63"
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:layout_marginHorizontal="30dp"
                    android:contentDescription="@string/todo10"
                    app:srcCompat="@drawable/samsung"
                    android:paddingBottom="30dp"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>