<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="890dp">

                <LinearLayout
                    android:id="@+id/linearLayout15"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/screen1_background"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView27"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/todo28"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.13999999"
                    app:srcCompat="@drawable/arrow_icon" />

                <EditText
                    android:id="@+id/editTextText4"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="@drawable/login_btn_background"
                    android:ems="10"
                    android:hint="@string/search_bar"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:textColor="#7C7575"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.135"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/imageView28"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.98"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.133"
                    app:srcCompat="@drawable/btn_search" />

                <ImageView
                    android:id="@+id/imageView29"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.22000003"
                    app:srcCompat="@drawable/search_history" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/laptop_vivo_book"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView29"
                    app:layout_constraintVertical_bias="0.01999998" />

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView23"
                    app:layout_constraintVertical_bias="0.00999999"
                    app:srcCompat="@drawable/line" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oppo_reno6_5g_128gb"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.21"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.31" />

                <ImageView
                    android:id="@+id/imageView31"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView24"
                    app:layout_constraintVertical_bias="0.01999998"
                    app:srcCompat="@drawable/line" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_search_history"
                    android:textColor="#8D8B8B"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.64"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView31"
                    app:layout_constraintVertical_bias="0.01999998" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>



    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>